--- a/JetDevsHomeWork/Login/Views/LoginViewController.xib
+++ b/JetDevsHomeWork/Login/Views/LoginViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -11,29 +11,83 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="JetDevsHomeWork" customModuleProvider="target">
             <connections>
+                <outlet property="btnClose" destination="oKV-fI-U7O" id="xsG-in-1GN"/>
+                <outlet property="btnLogin" destination="7ws-D8-cNR" id="EUp-Hw-8bW"/>
+                <outlet property="textFieldEmail" destination="sM3-4x-cLC" id="bzK-Np-JLr"/>
+                <outlet property="textFieldPassword" destination="orL-iK-Ay1" id="ezQ-LN-rqz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKV-fI-U7O">
+                    <rect key="frame" x="15" y="65" width="50" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="LU7-OK-XmI"/>
+                        <constraint firstAttribute="width" secondItem="oKV-fI-U7O" secondAttribute="height" id="NR6-7d-ygP"/>
+                    </constraints>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" image="ic_close"/>
+                    <connections>
+                        <action selector="closeButtonTap:" destination="-1" eventType="touchUpInside" id="dhK-C9-HLO"/>
+                    </connections>
+                </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Tyd-Wl-cp6">
-                    <rect key="frame" x="104" y="124" width="185" height="70"/>
+                    <rect key="frame" x="95" y="135" width="185" height="70"/>
                 </imageView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="UJA-Rq-RrH">
+                    <rect key="frame" x="25" y="280" width="325" height="126"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sM3-4x-cLC" customClass="MDCOutlinedTextField">
+                            <rect key="frame" x="0.0" y="0.0" width="325" height="45"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="nBE-tF-ggu"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="orL-iK-Ay1" customClass="MDCOutlinedTextField">
+                            <rect key="frame" x="0.0" y="81" width="325" height="45"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                        </textField>
+                    </subviews>
+                </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ws-D8-cNR">
+                    <rect key="frame" x="25" y="466" width="325" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="L95-tc-2mF"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Login"/>
+                    <connections>
+                        <action selector="loginButtonTap:" destination="-1" eventType="touchUpInside" id="SsG-qh-Hsd"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="UJA-Rq-RrH" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="0c6-dX-A2Q"/>
+                <constraint firstItem="oKV-fI-U7O" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="3h9-s7-AcT"/>
                 <constraint firstItem="Tyd-Wl-cp6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7V2-dO-fIC"/>
-                <constraint firstItem="Tyd-Wl-cp6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="65" id="i5D-qR-ChU"/>
+                <constraint firstItem="UJA-Rq-RrH" firstAttribute="top" secondItem="Tyd-Wl-cp6" secondAttribute="bottom" constant="75" id="IAI-HV-Dds"/>
+                <constraint firstItem="7ws-D8-cNR" firstAttribute="leading" secondItem="UJA-Rq-RrH" secondAttribute="leading" id="Vg6-kR-nJ3"/>
+                <constraint firstItem="7ws-D8-cNR" firstAttribute="top" secondItem="UJA-Rq-RrH" secondAttribute="bottom" constant="60" id="bqb-BT-sGT"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="UJA-Rq-RrH" secondAttribute="trailing" constant="25" id="dAc-Md-tdO"/>
+                <constraint firstItem="oKV-fI-U7O" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="15" id="dFN-1c-pcC"/>
+                <constraint firstItem="Tyd-Wl-cp6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="85" id="i5D-qR-ChU"/>
+                <constraint firstItem="7ws-D8-cNR" firstAttribute="trailing" secondItem="UJA-Rq-RrH" secondAttribute="trailing" id="shm-eb-p4H"/>
             </constraints>
-            <point key="canvasLocation" x="132" y="-32"/>
+            <point key="canvasLocation" x="130.53435114503816" y="-32.394366197183103"/>
         </view>
     </objects>
     <resources>
         <image name="home_logo" width="185" height="70"/>
+        <image name="ic_close" width="16" height="16"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
